Fixed bug that caused overflow to section from accordian content.

--- a/Portfolio/src/Styles/about.scss
+++ b/Portfolio/src/Styles/about.scss
@@ -165,10 +165,10 @@
                 flex-direction: column;
                 justify-content: center;
                 gap: 0.5rem;
+                width: 100%;
                 .accordian-btn{
                     font-size: 1.2rem;
                     padding: 1.5rem 2rem;
-                    min-width: 100%;
                     border-radius: 1rem;
                     display: flex;
                     justify-content:flex-start;
@@ -176,7 +176,7 @@
                     gap: 1rem;
                     margin-bottom: 0;
                     background-color: $dark-green;
-
+                    min-width: 100%;
                     &:hover{
                         color: $primary-light;
                     }
@@ -196,14 +196,15 @@
                     background-color: $dark-green;
                     max-height: 0;
                     transition: max-height 0.5s ease-in-out;
+                    overflow: hidden;
                     p{
                         font-size: 1.5rem;
                         color: white;
                         padding: 1rem;
                     }
                     &.active{
+                        overflow: auto;
                         max-height: 30rem;
-                        
                     }
                 }
             }
